[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/UntitledValley/Enemy/Snack/Object/Duye/Animation/Frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scenes/UntitledValley/Enemy/Snack/Object/Duye/Scripts/Duye.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[node name="Duye" type="RigidBody2D"]
collision_layer = 32
gravity_scale = 2.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 1 )
animation = "fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TimerDisapper" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Duye_body_entered"]
[connection signal="timeout" from="TimerDisapper" to="." method="_on_TimerDisapper_timeout"]
